updated query class

--- a/my_neural_network.ipynb
+++ b/my_neural_network.ipynb
@@ -2,11 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
     "# defining the neural network class\n",
+    "import numpy\n",
     "\n",
     "class neuralNetwork:\n",
     "    # function for initializing neural network\n",
@@ -34,15 +35,16 @@
     "\n",
     "        # Using the sigmoid function as the activation function\n",
     "        import scipy\n",
-    "        self.activation_function = lambda x: scipy.spcial.explit()\n",
-    "        #lambda is a special way of declaring functions which is anonymous(nameless) - \n",
-    "        # it takes x as the input and returns the sigmoid function output using explit()\n",
+    "        self.activation_function = lambda x: scipy.special.expit(x)\n",
+    "        # lambda is a special way of declaring functions which is anonymous(nameless) - \n",
+    "        # it takes x as the input and returns the sigmoid function output using expit()\n",
     "\n",
+    "        pass\n",
     "        #The pass statement is used as a placeholder for future code. \n",
     "        # When the pass statement is executed, nothing happens, \n",
     "        # but you avoid getting an error when empty code is not allowed. \n",
     "        # Empty code is not allowed in loops, function definitions, class definitions, or in if statements.\n",
-    "        pass\n",
+    "        \n",
     "\n",
     "    # function for training the network\n",
     "    def train():\n",
@@ -50,14 +52,29 @@
     "\n",
     "    # function for implementing queries for the neural network\n",
     "    # takes input to a network and returns the output of the network\n",
-    "    def query():\n",
-    "        pass\n",
+    "    def query(self, input_list):\n",
+    "        # following will use numpy to convert the inputs into 2D array and then transpose with .T\n",
+    "        inputs = numpy.array(input_list, ndmin=2).T\n",
+    "\n",
+    "        # calculate the signals emerging in the hidden layer from the inputs\n",
+    "        hidden_inputs = numpy.dot(self.wih, inputs)\n",
+    "\n",
+    "        # calculate signals emerging from the hidden layer neurons to the next layer\n",
+    "        hidden_outputs = self.activation_function(hidden_inputs)\n",
+    "\n",
+    "        # calculate the signals into the final output layer - will act as inputs to the final layer\n",
+    "        final_inputs = numpy.dot(self.who, hidden_outputs)\n",
+    "\n",
+    "        #calculate the signals emerging from the final output layer\n",
+    "        final_outputs = self.activation_function(final_inputs)\n",
+    "\n",
+    "        return final_outputs\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,11 +82,34 @@
     "\n",
     "input_nodes = 3\n",
     "output_nodes = 3\n",
+    "# by changing the output nodes the the number of predicted output class will also change.\n",
+    "\n",
     "hidden_nodes = 3\n",
     "learning_rate = 0.3\n",
     "\n",
     "# creating instance of the neural network class\n",
     "n = neuralNetwork(input_nodes, hidden_nodes, output_nodes, learning_rate)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.49701511],\n",
+       "       [0.46204029]])"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "n.query([1.0, 0.5, -1.5])"
    ]
   },
   {
