--- a/my_neural_network.ipynb
+++ b/my_neural_network.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,15 +26,15 @@
     "        # weights inside the arrays are w_i_j, where link is from node i to node j in the next layer\n",
     "        # w11 w21 like input to hidden 1, input 2 to hidden 1.\n",
     "        # w12 w22 etc visualized in paper. \n",
-    "        self.wih = (numpy.random.rand(self.hnodes, self.inodes) - 0.5)\n",
-    "        self.who = (numpy.random.rand(self.onodes, self.hnodes) - 0.5)\n",
+    "        self.wih = numpy.random.normal(0.0, pow(self.hnodes, -0.5),(self.hnodes, self.inodes))\n",
+    "        self.who = numpy.random.normal(0.0, pow(self.onodes, -0.5),(self.onodes, self.hnodes))\n",
     "    \n",
     "        # updated code to initialize the weights\n",
     "        #self.wih = (numpy.random.normal(0.0, pow(self.hnodes, -0.5), (self.hnodes, self.inodes)))        \n",
     "        #self.who = (numpy.random.normal(0.0, pow(self.onodes, -0.5), (self.onodes, self.hnodes)))        \n",
     "\n",
     "        # Using the sigmoid function as the activation function\n",
-    "        import scipy\n",
+    "        import scipy.special\n",
     "        self.activation_function = lambda x: scipy.special.expit(x)\n",
     "        # lambda is a special way of declaring functions which is anonymous(nameless) - \n",
     "        # it takes x as the input and returns the sigmoid function output using expit()\n",
@@ -77,8 +77,8 @@
     "        hidden_errors = numpy.dot(self.who.T, output_errors)\n",
     "\n",
     "        # update the weights for the links between the hidden and output layer nodes\n",
-    "        self.who += self.lr  * numpy.dot((output_errors) * final_outputs * (1.0 - final_outputs)), numpy.transpose(hidden_outputs)\n",
-    "        pass\n",
+    "        self.who += self.lr  * numpy.dot((output_errors * final_outputs * (1.0 - final_outputs)), numpy.transpose(hidden_outputs))\n",
+    "    \n",
     "\n",
     "        # update the weights for the links between the input and the hidden  layer nodes\n",
     "        self.wih += self.lr * numpy.dot((hidden_errors * hidden_outputs * (1.0 - hidden_outputs)), numpy.transpose(inputs))\n",
@@ -107,17 +107,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
     "# enter some small node and learning rate values for testing the network classes\n",
     "\n",
-    "input_nodes = 3\n",
-    "output_nodes = 3\n",
+    "input_nodes = 784\n",
+    "output_nodes = 10\n",
     "# by changing the output nodes the the number of predicted output class will also change.\n",
     "\n",
-    "hidden_nodes = 3\n",
+    "hidden_nodes = 100\n",
     "learning_rate = 0.3\n",
     "\n",
     "# creating instance of the neural network class\n",
@@ -126,72 +126,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 53,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.5561189 ],\n",
-       "       [0.54704723],\n",
-       "       [0.38915534]])"
-      ]
-     },
-     "execution_count": 26,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "n.query([1.0, 0.5, -1.5])"
+    "#n.query([1.0, 0.5, -1.5])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0.40416865],\n",
-       "       [0.52099938],\n",
-       "       [0.41705921]])"
+       "array([[0.57938583, 0.22931399, 0.85007804],\n",
+       "       [0.29701272, 0.41437331, 0.98384946],\n",
+       "       [0.86824328, 0.5180835 , 0.59385753]])"
       ]
      },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "input_nodes2 = 3\n",
-    "output_nodes2 = 3\n",
-    "# by changing the output nodes the the number of predicted output class will also change.\n",
-    "\n",
-    "hidden_nodes2 = 3\n",
-    "learning_rate2 = 0.1\n",
-    "\n",
-    "# creating instance of the neural network class\n",
-    "n2= neuralNetwork(input_nodes2, hidden_nodes2, output_nodes2, learning_rate2)\n",
-    "\n",
-    "n2.query([1.0, 0.5, -1.5])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[0.2661878 , 0.30378083, 0.65761156],\n",
-       "       [0.7498274 , 0.99460868, 0.468318  ],\n",
-       "       [0.00608374, 0.89341553, 0.25866533]])"
-      ]
-     },
-     "execution_count": 3,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -209,11 +164,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n"
+    "# at first open the dataset from the local path in read only mode\n",
+    "training_data_file = open(\"mnist_dataset/mnist_train_100.csv\", 'r')\n",
+    "\n",
+    "# use redlines() to read each record at a time as a list.append\n",
+    "training_data_list = training_data_file.readlines()\n",
+    "\n",
+    "# close the dataset to avoid conflict elsewhere\n",
+    "training_data_file.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "100"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(training_data_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'3,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,38,43,105,255,253,253,253,253,253,174,6,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,43,139,224,226,252,253,252,252,252,252,252,252,158,14,0,0,0,0,0,0,0,0,0,0,0,0,0,0,178,252,252,252,252,253,252,252,252,252,252,252,252,59,0,0,0,0,0,0,0,0,0,0,0,0,0,0,109,252,252,230,132,133,132,132,189,252,252,252,252,59,0,0,0,0,0,0,0,0,0,0,0,0,0,0,4,29,29,24,0,0,0,0,14,226,252,252,172,7,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,85,243,252,252,144,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,88,189,252,252,252,14,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,91,212,247,252,252,252,204,9,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,32,125,193,193,193,253,252,252,252,238,102,28,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,45,222,252,252,252,252,253,252,252,252,177,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,45,223,253,253,253,253,255,253,253,253,253,74,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,31,123,52,44,44,44,44,143,252,252,74,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,15,252,252,74,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,86,252,252,74,0,0,0,0,0,0,0,0,0,0,0,0,0,0,5,75,9,0,0,0,0,0,0,98,242,252,252,74,0,0,0,0,0,0,0,0,0,0,0,0,0,61,183,252,29,0,0,0,0,18,92,239,252,252,243,65,0,0,0,0,0,0,0,0,0,0,0,0,0,208,252,252,147,134,134,134,134,203,253,252,252,188,83,0,0,0,0,0,0,0,0,0,0,0,0,0,0,208,252,252,252,252,252,252,252,252,253,230,153,8,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,49,157,252,252,252,252,252,217,207,146,45,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,7,103,235,252,172,103,24,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0,0\\n'"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "training_data_list[7]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy\n",
+    "import matplotlib.pyplot\n",
+    "\n",
+    "\n",
+    "# Split the values of the first list based on commas\n",
+    "#all_values = training_data_list[0].split(',')\n",
+    "\n",
+    "# remove the first label value and convert the remaining color pixel values into a numeric matrix\n",
+    "#image_array = numpy.asfarray(all_values[1:]).reshape((28, 28))\n",
+    "\n",
+    "# now show only the image array\n",
+    "#matplotlib.pyplot.imshow(image_array, cmap=\"Greys\", interpolation='None')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# scale the input range from 0-255 to 0.01-1.00 using formula\n",
+    "# re scaled and shaped the smaller mnist dataset\n",
+    "\n",
+    "#scaled_input = (numpy.asfarray(all_values[1:]) / 255 * 0.99) + 0.01\n",
+    "#print(scaled_input)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# the network fires neuron at the label which has the greates prediction accuracy. \n",
+    "# for example if the output is 0, then the oth neuron will fire and remaining will stay silent. \n",
+    "# there can also be uncertainities if 2 handwrien digits seem similar like 4 and 9\n",
+    "\n",
+    "# setting 10 output nodes for 10 digits\n",
+    "#onodes = 10\n",
+    "\n",
+    "#setting all the nodes value to 0.01\n",
+    "#targets = numpy.zeros(onodes) + 0.01\n",
+    "\n",
+    "# the first digit is zero, so setting the first digit to fire first neuron with highest value\n",
+    "#targets[int(all_values[0])] = 0.99"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#print(targets)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# training the network with the whole dataset\n",
+    "\n",
+    "for record in training_data_list:\n",
+    "    #split based on comma\n",
+    "    all_values = record.split(',')\n",
+    "\n",
+    "    # scale and shift the inputs\n",
+    "    inputs = (numpy.asfarray(all_values[1:]) / 255.0 * 0.99) + 0.01\n",
+    "\n",
+    "    # create targets of output values (all neurons will fire 0.01 except the one hat is selected)\n",
+    "    targets = numpy.zeros(output_nodes) + 0.01\n",
+    "\n",
+    "    targets[int(all_values[0])] = 0.99\n",
+    "    n.train(inputs, targets)\n",
+    "    pass\n",
+    "    "
    ]
   }
  ],
