training complete with explanation

--- a/my_neural_network.ipynb
+++ b/my_neural_network.ipynb
@@ -114,10 +114,16 @@
     "# enter some small node and learning rate values for testing the network classes\n",
     "\n",
     "input_nodes = 784\n",
+    "#input dataset was 28*28 pixels =784 nodes that make up the handwritten image dataset\n",
     "output_nodes = 10\n",
     "# by changing the output nodes the the number of predicted output class will also change.\n",
     "\n",
     "hidden_nodes = 100\n",
+    "# hidden nodes selected less than input nodes because the eural network should select features which can be shorter than the input dataset\n",
+    "# chossing smaller value helps the network to summarize the key features of the dataset\n",
+    "# output nodes are 10\n",
+    "# so selecting 100 seems enough for the network to express the features. \n",
+    "# selecting smaller values may lead the network to not find enough explanatory features\n",
     "learning_rate = 0.3\n",
     "\n",
     "# creating instance of the neural network class\n",
